test_regress/t/t_class_method_bad.out
%Error: t/t_class_method_bad.v:11:20: Unsupported: class extends
   11 | class Cls2 extends Base1;
      |                    ^~~~~
%Error: t/t_class_method_bad.v:11:20: Found definition of 'Base1' as a CLASS but expected a variable
   11 | class Cls2 extends Base1;
      |                    ^~~~~
%Error: Exiting due to
